Adapt to AsyncStreamingDataSink